added backend, initial DB and collection

--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/CiprianaM/Nevermark-server/issues"
   },
-  "homepage": "https://github.com/CiprianaM/Nevermark-server#readme"
+  "homepage": "https://github.com/CiprianaM/Nevermark-server#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.8.9"
+  }
 }
