--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "elasticsearch": "^16.6.0",
+    "@elastic/elasticsearch": "^7.5.0",
     "express": "^4.17.1",
     "mongoose": "^5.8.9"
   }
