--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # dependencies
 /node_modules
 /.pnp
+/data
 .pnp.js
 
 # testing
@@ -14,13 +15,11 @@
 package-lock.json
 .DS_Store
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
+
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
 # config files
-.env
