--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   },
   "homepage": "https://github.com/CiprianaM/Nevermark-server#readme",
   "dependencies": {
+    "@elastic/elasticsearch": "^7.5.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "@elastic/elasticsearch": "^7.5.0",
     "express": "^4.17.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.8.9"
   }
 }
