--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
   "dependencies": {
     "@elastic/elasticsearch": "^7.5.0",
     "axios": "^0.19.2",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
-    "mongoose": "^5.8.9"
+    "mongoose": "^5.8.9",
+    "morgan": "^1.9.1",
+    "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0"
   }
 }
