--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,13 @@
-APP_PORT=
-DB=
-DB_HOST=
-DB_PORT=
+
+APP_PORT=3005
+APP_URL=http://localhost:3005
+CLIENT_URL=http://localhost:3001
+DB=neverMarkDB?replicaSet=rs
+DB_HOST=localhost
+DB_PORT=27017
 DB_USER=
 DB_PASS=
-NBRES_PER_FETCH=
+PASSPORT_CLIENT_ID=
+PASSPORT_CLIENT_SECRET=
+NBRES_PER_FETCH=30
+ELASTIC_INDEX=history-reindexed
