--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "moment": "^2.24.0",
     "mongoose": "^5.8.9",
     "morgan": "^1.9.1",
     "passport": "^0.4.1",
-    "passport-google-oauth": "^2.0.0"
+    "passport-google-oauth": "^2.0.0",
+    "path": "^0.12.7",
+    "puppeteer": "^2.1.0",
+    "sharp": "^0.24.0"
   }
 }
